fix body overflow on header menu open

--- a/src/components/shared/page/header/Header.module.scss
+++ b/src/components/shared/page/header/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  z-index: 4;
+  z-index: 11;
   width: 100%;
   height: 96px;
   padding: 0 40px;
